--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,9 @@
 </head>
 <body>
   <app-root></app-root>
+
+
+  <!-- For external login -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </body>
 </html>
